tests/semantic/rule_undeclared_relation/rule_undeclared_relation.err
Error: Undefined relation a in file rule_undeclared_relation.dl at line 5
a(X) :- b(X).
^-------------
Error: Undefined relation c in file rule_undeclared_relation.dl at line 8
b(X) :- c(X).
--------^-----
2 errors generated, evaluation aborted
