tests/semantic/rule_undeclared_relation/rule_undeclared_relation.dl

.decl b(X:symbol)

// this should produce an error
a(X) :- b(X).

// as well as this
b(X) :- c(X).

